// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate.env should capture only prefixed environment vars when prefix is supplied 1`] = `
"window.appshell_env = {
	TEST_ENV_FOO: 'foo',
	TEST_ENV_BAR: 'bar',
}"
`;

exports[`generate.env should generate the runtime environment js file 1`] = `
"window.appshell_env = {
	REGISTRY: 'packages/cli/__tests__/assets/appshell_registry',
	ROOT: 'TestModule/Workspace',
	TEST_ENV_FOO: 'foo',
	TEST_ENV_BAR: 'bar',
}"
`;
